Fixed: Modal scrolling causing app to scroll on iOS

--- a/frontend/src/Components/Modal/Modal.css
+++ b/frontend/src/Components/Modal/Modal.css
@@ -29,6 +29,12 @@
   overflow: hidden !important;
 }
 
+.modalOpenIOS {
+  position: fixed;
+  right: 0;
+  left: 0;
+}
+
 /*
  * Sizes
  */
